--- a/kocom.yaml
+++ b/kocom.yaml
@@ -90,7 +90,7 @@ esphome:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
 light:
-  # 안방 조명 1 (Room 1 - Master Bedroom Light 1)
+  # 안방 조명 1
   - platform: uartex
     name: "안방 조명 1 (R1)"
     id: master_bedroom_light_1
@@ -104,17 +104,26 @@ light:
       offset: 8
       data: [0x00]
     command_on: !lambda |-
-      uint8_t light2_state = id(master_bedroom_light_2).current_values.is_on() ? 0xff : 0x00;
+      // 안전한 상태 확인
+      uint8_t light2_state = 0x00;
+      if (id(master_bedroom_light_2).state) {
+        auto state = id(master_bedroom_light_2).current_values;
+        light2_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_off: !lambda |-
-      uint8_t light2_state = id(master_bedroom_light_2).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light2_state = 0x00;
+      if (id(master_bedroom_light_2).state) {
+        auto state = id(master_bedroom_light_2).current_values;
+        light2_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     update_interval: 120min
 
-  # 안방 조명 2 (Room 1 - Master Bedroom Light 2)
+  # 안방 조명 2
   - platform: uartex
     name: "안방 조명 2 (R1)"
     id: master_bedroom_light_2
@@ -128,10 +137,18 @@ light:
       offset: 9
       data: [0x00]
     command_on: !lambda |-
-      uint8_t light1_state = id(master_bedroom_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light1_state = 0x00;
+      if (id(master_bedroom_light_1).state) {
+        auto state = id(master_bedroom_light_1).current_values;
+        light1_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, light1_state, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_off: !lambda |-
-      uint8_t light1_state = id(master_bedroom_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light1_state = 0x00;
+      if (id(master_bedroom_light_1).state) {
+        auto state = id(master_bedroom_light_1).current_values;
+        light1_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
   # command_update 삭제! (조명 1이 업데이트할 때 같이 업데이트됨)
     
@@ -325,48 +342,44 @@ light:
       ack: [0x30, 0xdc]
     update_interval: 138min
     
-  # 거실 조명 1 (Room 0 - Living Room Light 1)
+# 거실 조명 1
   - platform: uartex
     name: "거실 조명 1 (R0)"
     id: living_room_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0xff]
-    state_off:
-      offset: 8
-      data: [0x00]
+    ...
     command_on: !lambda |-
-      uint8_t light2_state = id(living_room_light_2).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light2_state = 0x00;
+      if (id(living_room_light_2).state) {
+        auto state = id(living_room_light_2).current_values;
+        light2_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0xff, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_off: !lambda |-
-      uint8_t light2_state = id(living_room_light_2).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light2_state = 0x00;
+      if (id(living_room_light_2).state) {
+        auto state = id(living_room_light_2).current_values;
+        light2_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 141min
 
-  # 거실 조명 2 (Room 0 - Living Room Light 2)
+  # 거실 조명 2
   - platform: uartex
     name: "거실 조명 2 (R0)"
     id: living_room_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
+    ...
     command_on: !lambda |-
-      uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light1_state = 0x00;
+      if (id(living_room_light_1).state) {
+        auto state = id(living_room_light_1).current_values;
+        light1_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_off: !lambda |-
-      uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t light1_state = 0x00;
+      if (id(living_room_light_1).state) {
+        auto state = id(living_room_light_1).current_values;
+        light1_state = state.is_on() ? 0xff : 0x00;
+      }
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     # command_update 삭제! (조명 1이 업데이트할 때 같이 업데이트됨)
 
