--- a/kocom.yaml
+++ b/kocom.yaml
@@ -822,18 +822,16 @@ valve:
 switch:
   # 일괄소등 스위치
   - platform: template
-    name: "일괄소등"
-    id: all_lights_off
+    name: "All Lights Control"
+    id: all_lights_control
     icon: "mdi:lightbulb-group-off"
     optimistic: true
     restore_mode: RESTORE_DEFAULT_ON
     turn_on_action:
-      # 이전 상태 복원
       - uartex.write:
           data: [0x30, 0x9c, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x66, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff]
           ack: [0x30, 0xdc]
     turn_off_action:
-      # 모든 조명 끄기 - Room FF 사용
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
