Refactor button configuration in kocom.yaml

--- a/kocom.yaml
+++ b/kocom.yaml
@@ -819,21 +819,23 @@ valve:
       ack: [0x30, 0xdc]
     update_interval: 2h
     
-switch:
-  # 일괄소등 스위치
+button:
+  # 일괄소등
   - platform: template
-    name: "All Lights Control"
-    id: all_lights_control
+    name: "All Lights OFF"
     icon: "mdi:lightbulb-group-off"
-    optimistic: true
-    restore_mode: RESTORE_DEFAULT_ON
-    turn_on_action:
+    on_press:
       - uartex.write:
-          data: [0x30, 0x9c, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x66, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff]
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
-    turn_off_action:
+  
+  # 조명 복원
+  - platform: template
+    name: "Lights Restore"
+    icon: "mdi:lightbulb-group"
+    on_press:
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
 #sensor:
 #  - platform: uartex
