--- a/kocom.yaml
+++ b/kocom.yaml
@@ -819,24 +819,26 @@ valve:
       ack: [0x30, 0xdc]
     update_interval: 2h
     
-button:
-  # 일괄소등
+switch:
   - platform: template
-    name: "All Lights OFF"
-    icon: "mdi:lightbulb-group-off"
-    on_press:
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-  
-  # 조명 복원
-  - platform: template
-    name: "Lights Restore"
+    name: "All Lights Control"
     icon: "mdi:lightbulb-group"
-    on_press:
+    optimistic: true
+    restore_mode: RESTORE_DEFAULT_ON  # ON 상태로 변경 (부팅 시 안전)
+    turn_on_action:
+      # 이전 상태 복원
+      - logger.log: "일괄소등 해제 중..."
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc, 0x00, 0x3b]  # ← 더 정확한 ACK
+      - logger.log: "복원 완료"
+    turn_off_action:
+      # 일괄소등
+      - logger.log: "일괄소등 실행 중..."
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc, 0x00, 0x3b]  # ← 더 정확한 ACK
+      - logger.log: "일괄소등 완료"
 #sensor:
 #  - platform: uartex
 #    name: "Elevator Floors"
