--- a/kocom.yaml
+++ b/kocom.yaml
@@ -820,25 +820,43 @@ valve:
     update_interval: 2h
     
 switch:
+# 일괄소등 토글 스위치 - 일괄소등 ↔ 이전 상태 복원
   - platform: template
     name: "All Lights Control"
     icon: "mdi:lightbulb-group"
     optimistic: true
-    restore_mode: RESTORE_DEFAULT_ON  # ON 상태로 변경 (부팅 시 안전)
+    restore_mode: DISABLED
     turn_on_action:
-      # 이전 상태 복원
-      - logger.log: "일괄소등 해제 중..."
+      # 이전 상태 복원 (일괄소등 해제) - 월패드가 기억하는 이전 상태로만 복원
+      - logger.log: "일괄소등 해제 - 이전 상태로 복원 중..."
+      # 패턴 1: 기본 일괄소등 해제 (0x3B 디바이스) - 복원 명령만
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 2: 월패드 복원 제어 (0x01 디바이스) - 복원 명령
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc, 0x00, 0x3b]  # ← 더 정확한 ACK
-      - logger.log: "복원 완료"
+          ack: [0x30, 0xdc]
+      - logger.log: "일괄소등 해제 완료 - 이전 조명 상태로 복원되었습니다"
     turn_off_action:
-      # 일괄소등
+      # 일괄소등 실행 (모든 조명 끄기)
       - logger.log: "일괄소등 실행 중..."
+      # 패턴 1: 기본 일괄소등 (0x3B 디바이스)
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc, 0x00, 0x3b]  # ← 더 정확한 ACK
-      - logger.log: "일괄소등 완료"
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 2: 전체 조명 제어 (0x0E 디바이스, Room FF)
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 3: 월패드 제어 (0x01 디바이스)
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "일괄소등 완료 - 모든 조명이 꺼졌습니다"
 #sensor:
 #  - platform: uartex
 #    name: "Elevator Floors"
