--- a/kocom.yaml
+++ b/kocom.yaml
@@ -778,26 +778,6 @@ text_sensor:
     lambda: |-
       return id(elevator_text_state);
 
-button:
-  # 엘리베이터 호출
-  - platform: uartex
-    name: "Elevator Call"
-    icon: "mdi:elevator"
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x44, 0x00, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-      # 전원 공급선만 활성화 (조명은 켜지지 않음)
-  - platform: template
-    name: "Power Supply Activate"
-    icon: "mdi:power-plug"
-    on_press:
-      # 전원 공급선만 활성화 - Room ID를 0x00으로 변경하여 일괄소등 방지
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - logger.log: "전원 공급선 활성화 (일괄소등 방지 적용)"
-
 valve:
   - platform: uartex
     name: "Gas Valve"
@@ -818,45 +798,45 @@ valve:
       data: [0x30, 0xbc, 0x00, 0x2c, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     update_interval: 2h
-    
+
+button:
+  # 엘리베이터 호출
+  - platform: uartex
+    name: "Elevator Call"
+    icon: "mdi:elevator"
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x44, 0x00, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+
+  # 전원 공급선만 활성화
+  - platform: template
+    name: "Power Supply Activate"
+    icon: "mdi:power-plug"
+    on_press:
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "전원 공급선 활성화"
+
 switch:
-# 일괄소등 토글 스위치 - 일괄소등 ↔ 이전 상태 복원
+  # 일괄소등 스위치
   - platform: template
     name: "All Lights Control"
     icon: "mdi:lightbulb-group"
     optimistic: true
-    restore_mode: DISABLED
+    restore_mode: RESTORE_DEFAULT_ON
     turn_on_action:
-      # 이전 상태 복원 (일괄소등 해제) - 월패드가 기억하는 이전 상태로만 복원
-      - logger.log: "일괄소등 해제 - 이전 상태로 복원 중..."
-      # 패턴 1: 기본 일괄소등 해제 (0x3B 디바이스) - 복원 명령만
+      # 조명 복원
+      - logger.log: "조명 복원 중..."
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 500ms
-      # 패턴 2: 월패드 복원 제어 (0x01 디바이스) - 복원 명령
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - logger.log: "일괄소등 해제 완료 - 이전 조명 상태로 복원되었습니다"
+      - logger.log: "복원 완료"
     turn_off_action:
-      # 일괄소등 실행 (모든 조명 끄기)
+      # 일괄소등
       - logger.log: "일괄소등 실행 중..."
-      # 패턴 1: 기본 일괄소등 (0x3B 디바이스)
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 500ms
-      # 패턴 2: 전체 조명 제어 (0x0E 디바이스, Room FF)
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 500ms
-      # 패턴 3: 월패드 제어 (0x01 디바이스)
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - logger.log: "일괄소등 완료 - 모든 조명이 꺼졌습니다"
+      - logger.log: "일괄소등 완료"
 #sensor:
 #  - platform: uartex
 #    name: "Elevator Floors"
