--- a/kocom.yaml
+++ b/kocom.yaml
@@ -826,14 +826,12 @@ switch:
     optimistic: true
     restore_mode: RESTORE_DEFAULT_ON
     turn_on_action:
-      # 조명 복원
-      - logger.log: "조명 복원 중..."
+      # 조명 복원 (한 번만!)
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      - logger.log: "복원 완료"
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      - logger.log: "조명 복원 완료"
     turn_off_action:
-      # 일괄소등
-      - logger.log: "일괄소등 실행 중..."
+      # 일괄소등 (한 번만!)
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       - logger.log: "일괄소등 완료"
