--- a/kocom.yaml
+++ b/kocom.yaml
@@ -778,6 +778,26 @@ text_sensor:
     lambda: |-
       return id(elevator_text_state);
 
+button:
+  # 엘리베이터 호출
+  - platform: uartex
+    name: "Elevator Call"
+    icon: "mdi:elevator"
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x44, 0x00, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+
+      # 전원 공급선만 활성화 (조명은 켜지지 않음)
+  - platform: template
+    name: "Power Supply Activate"
+    icon: "mdi:power-plug"
+    on_press:
+      # 전원 공급선만 활성화 - Room ID를 0x00으로 변경하여 일괄소등 방지
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "전원 공급선 활성화 (일괄소등 방지 적용)"
+
 valve:
   - platform: uartex
     name: "Gas Valve"
@@ -798,25 +818,6 @@ valve:
       data: [0x30, 0xbc, 0x00, 0x2c, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     update_interval: 2h
-
-button:
-  # 엘리베이터 호출
-  - platform: uartex
-    name: "Elevator Call"
-    icon: "mdi:elevator"
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x44, 0x00, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-  # 전원 공급선만 활성화
-  - platform: template
-    name: "Power Supply Activate"
-    icon: "mdi:power-plug"
-    on_press:
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - logger.log: "전원 공급선 활성화"
 
 #sensor:
 #  - platform: uartex
