--- a/kocom.yaml
+++ b/kocom.yaml
@@ -870,3 +870,41 @@ valve:
 #글 참고 도착 패킷
 #AA55 30 BC 00 44 00 01 00 01 03 00 00 00 00 00 00 00 35 0D 0D 
 #[출처] 구코콤 엘리베이터 호출 및 층수 디스플레이 추가 성공기(part 1) (HomeAssistant) | 작성자 꼬르륵
+switch:
+# 일괄소등 토글 스위치 - 일괄소등 ↔ 이전 상태 복원
+  - platform: template
+    name: "All Lights Control"
+    icon: "mdi:lightbulb-group"
+    optimistic: true
+    restore_mode: DISABLED
+    turn_on_action:
+      # 이전 상태 복원 (일괄소등 해제) - 월패드가 기억하는 이전 상태로만 복원
+      - logger.log: "일괄소등 해제 - 이전 상태로 복원 중..."
+      # 패턴 1: 기본 일괄소등 해제 (0x3B 디바이스) - 복원 명령만
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 2: 월패드 복원 제어 (0x01 디바이스) - 복원 명령
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "일괄소등 해제 완료 - 이전 조명 상태로 복원되었습니다"
+    turn_off_action:
+      # 일괄소등 실행 (모든 조명 끄기)
+      - logger.log: "일괄소등 실행 중..."
+      # 패턴 1: 기본 일괄소등 (0x3B 디바이스)
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 2: 전체 조명 제어 (0x0E 디바이스, Room FF)
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - delay: 500ms
+      # 패턴 3: 월패드 제어 (0x01 디바이스)
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "일괄소등 완료 - 모든 조명이 꺼졌습니다"
