--- a/kocom.yaml
+++ b/kocom.yaml
@@ -534,7 +534,7 @@ climate:
       return {{0x30, 0xbc, 0x00, 0x36, 0x03, 0x01, 0x00, 0x00, 0x11, preset, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     on_state:
       - logger.log:
-          format: "옷방 보일러 상태 변경: 모드=%s, 목표온도=%.0f°C, 현재온도=%.0f°C, 프리셋=%s"
+          format: "사라방 보일러 상태 변경: 모드=%s, 목표온도=%.0f°C, 현재온도=%.0f°C, 프리셋=%s"
           args:
             - 'x.mode == CLIMATE_MODE_HEAT ? "난방" : x.mode == CLIMATE_MODE_OFF ? "꺼짐" : "알수없음"'
             - "x.target_temperature"
@@ -634,6 +634,8 @@ climate:
     state_preset_none:
       offset: 9
       data: [0x00]
+    command_off: !lambda |-
+      return {{0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc, 0x00, 0x36, 0x00}};
     command_heat: !lambda |-
       uint8_t target = id(Alpha_room_heater).target_temperature;
       uint8_t preset = id(Alpha_room_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
