--- a/kocom.yaml
+++ b/kocom.yaml
@@ -404,6 +404,8 @@ climate:
     state_preset_none:
       offset: 9
       data: [0x00]
+    command_off: !lambda |-
+      return {{0x30, 0xbc, 0x00, 0x36, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc, 0x00, 0x36, 0x00}};
     command_heat: !lambda |-
       uint8_t target = id(living_room_heater).target_temperature;
       uint8_t preset = id(living_room_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
@@ -461,6 +463,8 @@ climate:
     state_preset_none:
       offset: 9
       data: [0x00]
+    command_off: !lambda |-
+      return {{0x30, 0xbc, 0x00, 0x36, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc, 0x00, 0x36, 0x00}};
     command_heat: !lambda |-
       uint8_t target = id(master_room_heater).target_temperature;
       uint8_t preset = id(master_room_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
@@ -518,6 +522,8 @@ climate:
     state_preset_none:
       offset: 9
       data: [0x00]
+    command_off: !lambda |-
+      return {{0x30, 0xbc, 0x00, 0x36, 0x03, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc, 0x00, 0x36, 0x00}};
     command_heat: !lambda |-
       uint8_t target = id(room3_heater).target_temperature;
       uint8_t preset = id(room3_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
@@ -576,6 +582,8 @@ climate:
     state_preset_none:
       offset: 9
       data: [0x00]
+    command_off: !lambda |-
+      return {{0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc, 0x00, 0x36, 0x00}};
     command_heat: !lambda |-
       uint8_t target = id(room2_heater).target_temperature;
       uint8_t preset = id(room2_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
