--- a/kocom.yaml
+++ b/kocom.yaml
@@ -253,25 +253,32 @@ light:
       ack: [0x30, 0xdc]
     update_interval: 129min
 
-  # 주방 조명 1
+   # 주방 조명 1
   - platform: uartex
     name: "주방 조명 1 (R5)"
     id: kitchen_light_1
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+
     state_on:
-      offset: 8
+      offset: 9
       data: [0xff]
+
     state_off:
-      offset: 8
+      offset: 9
       data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+
+    command_on: !lambda |-
+      uint8_t l2 = id(kitchen_light_2).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l3 = id(kitchen_light_3).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,0xff,l2,l3,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
+    command_off: !lambda |-
+      uint8_t l2 = id(kitchen_light_2).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l3 = id(kitchen_light_3).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,0x00,l2,l3,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
@@ -284,18 +291,25 @@ light:
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+
     state_on:
-      offset: 9
+      offset: 10
       data: [0xff]
+
     state_off:
-      offset: 9
+      offset: 10
       data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+
+    command_on: !lambda |-
+      uint8_t l1 = id(kitchen_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l3 = id(kitchen_light_3).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,0xff,l3,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
+    command_off: !lambda |-
+      uint8_t l1 = id(kitchen_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l3 = id(kitchen_light_3).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,0x00,l3,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
@@ -308,18 +322,25 @@ light:
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+  
     state_on:
-      offset: 10
+      offset: 11
       data: [0xff]
+
     state_off:
-      offset: 10
+      offset: 11
       data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+
+    command_on: !lambda |-
+      uint8_t l1 = id(kitchen_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l2 = id(kitchen_light_2).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,l2,0xff,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
+    command_off: !lambda |-
+      uint8_t l1 = id(kitchen_light_1).current_values.is_on() ? 0xff : 0x00;
+      uint8_t l2 = id(kitchen_light_2).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,l2,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
