--- a/kocom.yaml
+++ b/kocom.yaml
@@ -253,7 +253,7 @@ light:
       ack: [0x30, 0xdc]
     update_interval: 129min
 
-   # 주방 조명 1
+# 주방 조명 1
   - platform: uartex
     name: "주방 조명 1 (R5)"
     id: kitchen_light_1
@@ -262,11 +262,11 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
 
     state_on:
-      offset: 9
+      offset: 8  # 변경: 9 → 8
       data: [0xff]
 
     state_off:
-      offset: 9
+      offset: 8  # 변경: 9 → 8
       data: [0x00]
 
     command_on: !lambda |-
@@ -293,11 +293,11 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
 
     state_on:
-      offset: 10
+      offset: 9  # 변경: 10 → 9
       data: [0xff]
 
     state_off:
-      offset: 10
+      offset: 9  # 변경: 10 → 9
       data: [0x00]
 
     command_on: !lambda |-
@@ -310,10 +310,7 @@ light:
       uint8_t l3 = id(kitchen_light_3).current_values.is_on() ? 0xff : 0x00;
       return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,0x00,l3,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
 
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 135min
+    # command_update 삭제 (조명1이 업데이트할 때 같이 업데이트됨)
 
   # 주방 조명 3
   - platform: uartex
@@ -324,11 +321,11 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
   
     state_on:
-      offset: 11
+      offset: 10  # 변경: 11 → 10
       data: [0xff]
 
     state_off:
-      offset: 11
+      offset: 10  # 변경: 11 → 10
       data: [0x00]
 
     command_on: !lambda |-
@@ -339,12 +336,9 @@ light:
     command_off: !lambda |-
       uint8_t l1 = id(kitchen_light_1).current_values.is_on() ? 0xff : 0x00;
       uint8_t l2 = id(kitchen_light_2).current_values.is_on() ? 0xff : 0x00;
-      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,l2,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
+      return {{0x30,0xbc,0x00,0x0e,0x05,0x00,0x00,0x00,l1,l2,0x00,0x00,0x00,0x00,0x00,0x00},{0x30,0xdc}};
 
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 138min
+    # command_update 삭제 (조명1이 업데이트할 때 같이 업데이트됨)
     
   # 거실 조명 1 (Room 0 - Living Room Light 1)
   - platform: uartex
