Add outlet control configuration for 세나방
Added configuration for three outlets in the room2.

--- a/kocom.yaml
+++ b/kocom.yaml
@@ -725,3 +725,95 @@ switch:
           data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
       - logger.log: "일괄소등 완료 - 모든 조명이 꺼졌습니다"
+
+# ============================================
+# 콘센트 제어 (세나방 예시)
+# ============================================
+
+  
+  # 세나방 콘센트 1
+  - platform: uartex
+    name: "세나방 콘센트 1"
+    id: room2_outlet_1
+    icon: "mdi:power-socket-kr"
+    state:
+      data: [0x30, 0xd0, 0x00, 0x3b, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 8
+      data: [0xff]
+    state_off:
+      offset: 8
+      data: [0x00]
+    command_on: !lambda |-
+      uint8_t out2 = id(room2_outlet_2).state ? 0xff : 0x00;
+      uint8_t out3 = id(room2_outlet_3).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, 0xff, out2, out3, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_off: !lambda |-
+      uint8_t out2 = id(room2_outlet_2).state ? 0xff : 0x00;
+      uint8_t out3 = id(room2_outlet_3).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, 0x00, out2, out3, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_update:
+      data: [0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+
+  # 세나방 콘센트 2
+  - platform: uartex
+    name: "세나방 콘센트 2"
+    id: room2_outlet_2
+    icon: "mdi:power-socket-kr"
+    state:
+      data: [0x30, 0xd0, 0x00, 0x3b, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 9
+      data: [0xff]
+    state_off:
+      offset: 9
+      data: [0x00]
+    command_on: !lambda |-
+      uint8_t out1 = id(room2_outlet_1).state ? 0xff : 0x00;
+      uint8_t out3 = id(room2_outlet_3).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, out1, 0xff, out3, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_off: !lambda |-
+      uint8_t out1 = id(room2_outlet_1).state ? 0xff : 0x00;
+      uint8_t out3 = id(room2_outlet_3).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, out1, 0x00, out3, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+
+  # 세나방 콘센트 3
+  - platform: uartex
+    name: "세나방 콘센트 3"
+    id: room2_outlet_3
+    icon: "mdi:power-socket-kr"
+    state:
+      data: [0x30, 0xd0, 0x00, 0x3b, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 10
+      data: [0xff]
+    state_off:
+      offset: 10
+      data: [0x00]
+    command_on: !lambda |-
+      uint8_t out1 = id(room2_outlet_1).state ? 0xff : 0x00;
+      uint8_t out2 = id(room2_outlet_2).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, out1, out2, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_off: !lambda |-
+      uint8_t out1 = id(room2_outlet_1).state ? 0xff : 0x00;
+      uint8_t out2 = id(room2_outlet_2).state ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x3b, 0x02, 0x01, 0x00, 0x00, out1, out2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+
+ #      핵심 포인트:
+
+ #패킷 구조: 0x30, 0xbc, 0x00, 0x3b, 0x02 (세나방 콘센트 제어)
+ #상태 확인: offset 8, 9, 10이 각각 콘센트 1, 2, 3
+ #제어 방식: 조명과 동일하게 다른 콘센트 상태를 유지하면서 제어
+
+ #다른 방의 콘센트를 추가하려면 0x02 부분만 해당 방 번호로 변경하시면 됩니다:
+
+ #안방: 0x01
+ #사라방: 0x03
+ #알파룸: 0x04
+ #거실: 0x00
+ #주방: 0x05
