--- a/kocom.yaml
+++ b/kocom.yaml
@@ -699,32 +699,29 @@ switch:
   - platform: template
     name: "All Lights Control"
     icon: "mdi:lightbulb-group"
-    optimistic: true
+    optimistic: false
     restore_mode: DISABLED
     turn_on_action:
-      - logger.log: "일괄소등 해제 - 이전 상태로 복원 중..."
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 500ms
+      - logger.log: "일괄소등 해제 시도 중..."
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
-      - logger.log: "일괄소등 해제 완료 - 이전 조명 상태로 복원되었습니다"
+      - delay: 100ms
+      - lambda: 'id(all_lights_control).publish_state(true);'
+      - logger.log: "일괄소등 해제 완료"
     turn_off_action:
       - logger.log: "일괄소등 실행 중..."
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
-      - delay: 500ms
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 500ms
+      - delay: 100ms
       - uartex.write:
           data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
           ack: [0x30, 0xdc]
-      - logger.log: "일괄소등 완료 - 모든 조명이 꺼졌습니다"
+      - delay: 100ms
+      - lambda: 'id(all_lights_control).publish_state(false);'
+      - logger.log: "일괄소등 완료"
+    id: all_lights_control
 
 # ============================================
 # 콘센트 제어 (세나방 예시)
