--- a/kocom.yaml
+++ b/kocom.yaml
@@ -699,29 +699,19 @@ switch:
   - platform: template
     name: "All Lights Control"
     icon: "mdi:lightbulb-group"
-    optimistic: false
+    optimistic: true
     restore_mode: DISABLED
+    id: all_lights_control
     turn_on_action:
-      - logger.log: "일괄소등 해제 시도 중..."
+      - logger.log: "일괄 복구 실행 중..."
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 100ms
-      - lambda: 'id(all_lights_control).publish_state(true);'
-      - logger.log: "일괄소등 해제 완료"
+          data: [0x30, 0x9c, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x66, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff]
+      - logger.log: "일괄 복구 완료 - 이전 조명 상태로 복원"
     turn_off_action:
       - logger.log: "일괄소등 실행 중..."
       - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 100ms
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x3b, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - delay: 100ms
-      - lambda: 'id(all_lights_control).publish_state(false);'
-      - logger.log: "일괄소등 완료"
-    id: all_lights_control
+          data: [0x30, 0x9c, 0x00, 0x0e, 0xff, 0x01, 0x00, 0x65, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      - logger.log: "일괄소등 완료 - 모든 조명 꺼짐"
 
 # ============================================
 # 콘센트 제어 (세나방 예시)
